--- a/src/components/Calls/Components/IncomingCall/style.scss
+++ b/src/components/Calls/Components/IncomingCall/style.scss
@@ -18,6 +18,11 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     animation: slideIn 1s ease-out forwards;
 
+    @include screen(365px) {
+        scale: 0.8;
+        right: -45px;
+    }
+
     .user-and-options {
         @include flex-center(row, flex-start, center);
 
