--- a/src/components/Settings/style.scss
+++ b/src/components/Settings/style.scss
@@ -411,8 +411,9 @@
 
 
                         img {
-                            height: 80%;
+                            max-height: 80%;
                             border-radius: 13px;
+                            max-width: 90%;
                             transform: translateY(50px); // Başlangıç pozisyonu (50px aşağıda)
                             opacity: 0; // Başlangıçta görünmez
                             animation: slideUp 0.7s ease-out forwards; // Animasyonu uygula
